--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ flask-cors==4.0.1
 connexion[swagger-ui]==3.1.0
 connexion[flask]
 connexion[uvicorn]
+flask-testing
+
+transformers==4.30.2
+torch==2.0.1
+sacremoses==0.0.53
+sentencepiece==0.1.99
