--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,13 @@ connexion[flask]
 connexion[uvicorn]
 flask-testing
 
-transformers==4.30.2
-torch==2.0.1
-sacremoses==0.0.53
-sentencepiece==0.1.99
+numpy==2.0.2
+rasterio==1.4.3
+Pillow==11.1.0
+geopandas==1.0.1
+
+torch==2.6.0+cu124
+huggingface_hub==0.29.3
+
+pytest
+ipdb
