--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 setuptools >= 21.0.0
 gunicorn==22.0.0
-flask-marshmallow==1.1.0
-flask-cors==4.0.1
-connexion[swagger-ui]==3.1.0
+flask-marshmallow
+marshmallow-sqlalchemy
+flask-cors
+connexion[swagger-ui]
 connexion[flask]
 connexion[uvicorn]
 flask-testing
@@ -12,6 +13,7 @@ rasterio==1.4.3
 Pillow==11.1.0
 geopandas==1.0.1
 
+transformers==4.49.0
 torch==2.6.0
 huggingface_hub==0.29.3
 
