--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
-version: '3'
+version: '3.8'   # More recent features
 
 services:
-  basic-service:
+  easyearth-server:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - "3781:3781"
-
+    volumes:
+      - .:/usr/src/app
+    # tty: true
+    # stdin_open: true
