--- a/easyearth_plugin/Dockerfile
+++ b/easyearth_plugin/Dockerfile
@@ -6,12 +6,14 @@ RUN apt-get update && apt-get install -y libexpat1 && rm -rf /var/lib/apt/lists/
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
+# Copy only requirements first to leverage Docker cache
 COPY requirements.txt /usr/src/app/
 
 # upgrade pip
 RUN pip install --upgrade pip setuptools wheel
 RUN pip install --no-cache-dir -r requirements.txt --upgrade
 
+# Copy the rest of the application
 COPY . /usr/src/app
 
 EXPOSE 3781
