update dynamic data path in the container

--- a/easyearth_plugin/docker-compose.yml
+++ b/easyearth_plugin/docker-compose.yml
@@ -10,6 +10,10 @@ services:
     volumes:
       - .:/usr/src/app
       - /home/yan/Downloads:/usr/src/app/data
+      - type: bind
+      # TODO: make the alternative folder more flexible or more general that fits most users and os
+        source: ${DATA_DIR:-/home/yan/Downloads}
+        target: /usr/src/app/user
     environment:
       - PYTHONUNBUFFERED=1
 
