--- a/easyearth_plugin/docker-compose.yml
+++ b/easyearth_plugin/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "3781:3781"
     volumes:
       - .:/usr/src/app
-      - /home/yan/Downloads:/usr/src/app/data
+#      - /home/yan/Downloads:/usr/src/app/data
       - type: bind
       # TODO: verify and update. For now if the data path changes, the docker image needs to be rebuilt to uodate the path..and make the alternative folder more flexible or more general that fits most users and os.
         source: ${DATA_DIR:-/home/yan/Downloads/data}
