--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'   # More recent features
 
 services:
   easyearth-server:
+    image: easyearth_plugin_easyearth-server:latest
     build:
       context: .
       dockerfile: Dockerfile
@@ -9,14 +10,18 @@ services:
       - "3781:3781"
     volumes:
       - .:/usr/src/app
-      - /home/yan/Downloads:/usr/src/app/data
-      - type: bind
-      # TODO: verify and update. For now if the data path changes, the docker image needs to be rebuilt to uodate the path..and make the alternative folder more flexible or more general that fits most users and os.
-        source: /home/yan/Downloads/data
-        target: /usr/src/app/user
-    environment:
-      - PYTHONUNBUFFERED=1
-      - EASYEARTH_DATA_DIR=/home/yan/Downloads/data
+      - ./user:/usr/src/app/user
+#      - /home/yan/Downloads:/usr/src/app/data
+#      - type: bind
+#      # TODO: verify and update. For now if the data path changes, the docker image needs to be rebuilt to update the path..and make the alternative folder more flexible or more general that fits most users and os.
+#        source: ${DATA_DIR:-/home/yan/Downloads/data}
+#        target: /usr/src/app/user
+#    environment:
+#      - PYTHONUNBUFFERED=1
+#      - EASYEARTH_DATA_DIR=${DATA_DIR:-/home/yan/Downloads/data}
+
+    # tty: true
+    # stdin_open: true
 
     # tty: true
     # stdin_open: true
