--- a/easyearth_plugin/docker-compose.yml
+++ b/easyearth_plugin/docker-compose.yml
@@ -9,16 +9,10 @@ services:
     ports:
       - "3781:3781"
     volumes:
-      - .:/usr/src/app
-      - ./user:/usr/src/app/user
-#      - /home/yan/Downloads:/usr/src/app/data
-#      - type: bind
-#      # TODO: verify and update. For now if the data path changes, the docker image needs to be rebuilt to update the path..and make the alternative folder more flexible or more general that fits most users and os.
-#        source: ${DATA_DIR:-/home/yan/Downloads/data}
-#        target: /usr/src/app/user
-#    environment:
-#      - PYTHONUNBUFFERED=1
-#      - EASYEARTH_DATA_DIR=${DATA_DIR:-/home/yan/Downloads/data}
-
-    # tty: true
-    # stdin_open: true
+      - .:/usr/src/app # Sync the application code
+      - ${DATA_DIR:-./data}:/usr/src/app/data # Data directory
+      - ${TEMP_DIR:-./tmp}:/usr/src/app/tmp  # Temporary directory
+    environment:
+      - PYTHONUNBUFFERED=1
+      - EASYEARTH_DATA_DIR=/usr/src/app/data
+      - EASYEARTH_TEMP_DIR=/usr/src/app/tmp
