--- a/easyearth_plugin/docker-compose.yml
+++ b/easyearth_plugin/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'   # More recent features
 
 services:
   easyearth-server:
-    image: easyearth_plugin_easyearth-server:latest
+#    image: easyearth_plugin_easyearth-server:latest
     build:
       context: .
       dockerfile: Dockerfile
@@ -12,7 +12,9 @@ services:
       - .:/usr/src/app # Sync the application code
       - ${DATA_DIR:-./data}:/usr/src/app/data # Data directory
       - ${TEMP_DIR:-./tmp}:/usr/src/app/tmp  # Temporary directory
+      - ${LOG_DIR:-./logs}:/usr/src/app/logs  # Log directory
     environment:
       - PYTHONUNBUFFERED=1
       - EASYEARTH_DATA_DIR=/usr/src/app/data
       - EASYEARTH_TEMP_DIR=/usr/src/app/tmp
+      - EASYEARTH_LOG_DIR=/usr/src/app/logs
