--- a/easyearth_plugin/Dockerfile
+++ b/easyearth_plugin/Dockerfile
@@ -8,9 +8,10 @@ ENV APP_DIR=/usr/src/app
 ENV EASYEARTH_DATA_DIR=/usr/src/app/data
 ENV EASYEARTH_TEMP_DIR=/usr/src/app/tmp
 ENV EASYEARTH_LOG_DIR=/usr/src/app/logs
+ENV MODEL_CACHE_DIR=/usr/src/app/.cache/models
 
 # Create required directories
-RUN mkdir -p $APP_DIR $EASYEARTH_DATA_DIR $EASYEARTH_TEMP_DIR $EASYEARTH_LOG_DIR
+RUN mkdir -p $APP_DIR $EASYEARTH_DATA_DIR $EASYEARTH_TEMP_DIR $EASYEARTH_LOG_DIR $MODEL_CACHE_DIR
 WORKDIR $APP_DIR
 
 # Copy only requirements first to leverage Docker cache
