--- a/easyearth_plugin/docker-compose.yml
+++ b/easyearth_plugin/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'   # More recent features
 
 services:
   easyearth-server:
-#    image: easyearth_plugin_easyearth-server:latest
+    image: easyearth_plugin_easyearth-server
     build:
       context: .
       dockerfile: Dockerfile
